Modulo 7 - Bootstrap Java EE no sirve

--- a/BE/Module 6/bookstore-back/pom.xml
+++ b/BE/Module 6/bookstore-back/pom.xml
@@ -13,8 +13,7 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Test -->
-        <version.junit>4.13.2</version.junit>
-        <version.arquillian>1.1.13.5</version.arquillian>
+        <version.arquillian>1.5.0.0</version.arquillian>
         <version.shirnkwrap>1.2.6</version.shirnkwrap>
         <!-- Plugins -->
         <version.surefire.plugin>2.19.1</version.surefire.plugin>
@@ -25,9 +24,8 @@
             <dependency>
                 <groupId>org.arquillian</groupId>
                 <artifactId>arquillian-universe</artifactId>
-                <version>${version.arquillian}</version>
+                <version>1.5.0.0</version>
                 <type>pom</type>
-                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -43,37 +41,72 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${version.junit}</version>
+            <version>4.13.2</version>
+            <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.arquillian.universe</groupId>
             <artifactId>arquillian-junit</artifactId>
+            <version>1.5.0.0</version>
             <scope>test</scope>
             <type>pom</type>
         </dependency>
+
         <dependency>
             <groupId>org.jboss.shrinkwrap</groupId>
             <artifactId>shrinkwrap-api</artifactId>
             <version>1.2.6</version>
             <scope>compile</scope>
         </dependency>
+
         <dependency>
             <groupId>org.wildfly.arquillian</groupId>
             <artifactId>wildfly-arquillian-container-remote</artifactId>
-            <version>2.1.1.Final</version>
+            <version>5.0.0.Alpha1</version>
             <scope>test</scope>
         </dependency>
+        <!-- Estos no sirven
+
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-core</artifactId>
             <version>1.1.13.Final</version>
         </dependency>
+
         <dependency>
             <groupId>org.jboss.arquillian.container</groupId>
             <artifactId>arquillian-container-test-api</artifactId>
             <version>1.1.13.Final</version>
         </dependency>
+-->
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-core</artifactId>
+            <version>1.7.0.Alpha10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <version>1.6.0.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.test</groupId>
+            <artifactId>arquillian-test-api</artifactId>
+            <version>1.7.0.Alpha10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-container-test-api</artifactId>
+            <version>1.7.0.Alpha10</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+        </dependency>
     </dependencies>
 
     <build>
